# django-dumanity-webhooks

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SCOPE_COVERAGE_V1.1.0.md  TESTING.md  pyproject.toml  pytest.ini  tests.py  tests_settings.py  tests_urls.py
.github/workflows/: ci.yml  codeql.yml  publish-release.yml
docs/: auditing-guide.md  developers-guide.md  hardening-guide.md  incident-playbook.md  quickstart.md  release.md  users-guide.md
docs/examples/: audit-record-template.json
scripts/: dev_check.sh  load_test_receiver.py
webhooks/: README.md  __init__.py  cli.py  signals.py
webhooks/contrib/: __init__.py  pydantic.py
webhooks/core/: __init__.py  apps.py  checks.py  handlers.py  metrics.py  registry.py  security.py  signing.py  verification.py
webhooks/core/management/: __init__.py
webhooks/core/management/commands/: __init__.py  start_webhook_domain.py  webhooks_bootstrap.py  webhooks_list_failures.py  webhooks_replay.py  webhooks_validate_contracts.py
webhooks/producer/: __init__.py  admin.py  apps.py  dispatch.py  models.py  sender.py  services.py  tasks.py
webhooks/producer/migrations/: 0001_initial.py  0002_endpoint_delivery_policy.py
webhooks/receiver/: __init__.py  admin.py  api.py  apps.py  models.py  rate_limit.py  services.py
webhooks/receiver/migrations/: 0001_initial.py  0002_add_trace_id.py  0002_deadletter_replay_fields.py
webhooks/receiver/templates/admin/dumanity_webhooks_receiver/deadletter/: replay.html
webhooks/receiver/templates/admin/dumanity_webhooks_receiver/integration/: bootstrap.html  change_list.html
